--- a/source/_includes/asides/git_book.html
+++ b/source/_includes/asides/git_book.html
@@ -1,6 +1,7 @@
 <section>
   <h1>Become a git master!</h1>
-  <p>Want to master git? I'm working on a book dedicated to the working
+  {% img /images/git-cover.png %}
+  <p>Want to grok git? I'm working on a book dedicated to the working
   developer. I'll teach you all the tricks I use every day to make myself
   more productive. Enter your email address below to know when it's ready
   (you may get a nice discount on the release date).</p>
