--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -76,6 +76,7 @@ ol { list-style-type: decimal;
 ul, ol { &, ul, ol { margin-left: 1.3em; }}
 ul, ol { ul, ol { margin-bottom: 0em; }}
 
+li { margin-left: 1.3em; }
 strong { font-weight: bold; }
 
 em { font-style: italic; }
