--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,4 +1,5 @@
 <ul class="main-navigation">
   <li><a href="{{ root_url }}/">Blog</a></li>
+  <li><a href="{{ root_url }}/blog/2014/07/18/weekly-picks-2014-07-14/">Weekly Picks</a></li>
   <li><a href="https://twitter.com/jjbohn">@jjbohn</a></li>
 </ul>
